# openstack-mcp-server

./: README.md  openstack_client.py  openstack_mcp_server.py  pyproject.toml
config/: openstack_config.json  openstack_config.json.example
